# yolov5-onnxruntime-cpp-python

./: CMakeLists.txt  README.md
src/: main.cpp  main.py
